k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nerualifebakend.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 80
      - path: /webpage
        pathType: Prefix
        backend:
          service:
            name: mywebpage-service
            port:
              number: 80
      - path: /datacollection
        pathType: Prefix
        backend:
          service:
            name: mydatacollection-service
            port:
              number: 80
